# MaStaDaRe_analysis

./: .gitignore  Dokumentation MaStR API.html  LICENSE  MaStR_API_doc.md  Makefile  README.md  compose.yml  mastr_methods.txt  pre-commit-config.yaml  pyproject.toml  requirements.txt
.github/workflows/: main.yaml
backend/app/: codes.py  config.py  helper.py  main.py  nützlicheFunktionen.py
backend/app/core/: config.py
backend/app/db/: database.py
backend/app/etl/: csv_to_database.py  download.py  load.py  parquet_to_database.py  transform.py
backend/app/etl/queries/: aggregate_by_month.sql  aggregate_by_plz.sql  build_staging_solar.sql
backend/app/etl/services/: logger.py
backend/app/models/: asset.py  timeseries.py
backend/app/routers/: asset.py
backend/app/schemas/: asset.py
backend/etl/: download.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src/components/: NavBar.css  NavBar.jsx
frontend/src/pages/: MapPage.jsx  MapPage2.jsx
