[project]
name = "mastadatregpv-korrekt-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alive-progress>=3.3.0",
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "fastapi>=0.135.3",
    "geopandas>=1.1.3",
    "itables>=2.7.3",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "pandas==2.3.3",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.3",
    "pyarrow>=23.0.1",
    "requests>=2.33.1",
    "scipy>=1.17.1",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]
